<resources>
    <string name="app_name">CareTaker</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_caretaker_nfc">Pair with a Patient</string>
    <string name="center_map_description">button to center the map on the patient.</string>
    <string name="add">Add</string>
    <string name="add_advance">Add Advance</string>
    <string name="save">save</string>
    <string name="reset">reset</string>
    <string name="delete">delete</string>
    <string name="clear">clear</string>
    <string name="select">select</string>
    <string name="edit">edit</string>
    <string name="cancel">cancel</string>
    <string name="launch_caretaker">Launch Caretaker</string>
    <string name="add_fence_title">Add GeoFence</string>
    <string name="add_advance_fence_title">Add GeoFence Tunnel</string>
    <string name="edit_fence_title">Edit GeoFence</string>

    <string name="edit_advance_fence_title">Edit GeoFence Tunnel</string>

    <string name="messenger_textbox_hint">Type your message</string>
    <string name="button_send">Send</string>

    <string name="default_message_reciever_name">Searching for a recipient…</string>
    <string name="default_caretaker_name">Anonymous Caretaker</string>


    <string name="find_my_patient_button_text">Find %1$s</string>
    <string name="message_my_patient_button_text">Message %1$s</string>
    <string name="patient_nearby_text">%1$s is with me</string>

    <string name="find_my_patient_button_text_default">Find Patient</string>
    <string name="message_my_patient_button_text_default">Message Patient</string>
    <string name="patient_nearby_text_default">Patient is with me</string>


    <string name="title_activity_patient">Patient</string>
    <string name="title_activity_map">Find Patient</string>
    <string name="title_activity_dialog" />
    <string name="title_activity_messenger">Send a Message</string>
    <string name="choose_patient_text">Who do you want to take care of?</string>
    <string name="hint_description">Description</string>
    <string name="radius_of_geofence">Radius of GeoFence:</string>
    <string name="radius_of_geofence_formatter">Radius of GeoFence: %1$d M</string>
    <string name="timer">Start Timer</string>
    <string name="edit_patient_name">Edit Patient Name</string>
    <string name="hint_enter_name">Please enter a name</string>
    <string name="alert_message_change_fence_2">Are you sure this is the ending fence?</string>
    <string name="alert_message_change_fence_1">Are you sure this is the starting fence?</string>
    <string name="hours">Hours :</string>
    <string name="minutes">Min :</string>
    <string name="R.string.delete_confirm">Are you sure you want to delete this patient?</string>


</resources>
