<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.justzed.caretaker.MainActivity">


    <Switch
        android:id="@+id/switch_patient_disable_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patient_nearby_text" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_maps_my_location"
        android:text="@string/find_my_patient_button_text" />

    <Button
        android:id="@+id/button_messenger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_communication_email"
        android:text="@string/message_my_patient_button_text"
        />

</LinearLayout>
