<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.justzed.caretaker.MessengerActivity"
    android:id="@+id/messenger">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/recipient_name"
        android:layout_gravity="center_horizontal"
        android:text = "@string/default_message_reciever_name"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <EditText android:id = "@+id/edit_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint= "@string/messenger_textbox_hint"
            android:inputType="text"/>

        <Button android:layout_width="wrap_content"
            android:id = "@+id/send_button"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:enabled = "false"/>
    </LinearLayout>
</LinearLayout>
