<!--<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.maps.MapView android:id="@+id/google_maps"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:apiKey="@string/google_maps_key"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapCenterButton"
        android:src="@drawable/map_center"
        android:contentDescription="@string/center_map_description"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp" />
</RelativeLayout>-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity"
    android:id="@+id/layout1">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/map"
        tools:context="com.justzed.caretaker.MapActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapCenterButton"
        android:src="@drawable/map_center"
        android:contentDescription="@string/center_map_description"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="centerPatientMarker" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:id="@+id/fence_layout"
        android:weightSum="1"
        tools:visibility="visible"
        android:visibility="gone">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textAlignment="center"
                android:id="@+id/fence_mode_text_view"
                android:background="#f0ffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/fence_title_edit_text"
                android:text=""
                android:hint="Type title of fence here..."
                android:textAlignment="center"
                android:textSize="18sp"
                android:background="#f0ffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textAlignment="center"
                android:id="@+id/fence_radius_text_view"
                android:background="#f0ffffff"
                android:text="Radius of fence : " />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fence_seek_bar"
                android:splitTrack="false"
                android:background="#f0ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save_button"
                android:layout_gravity="right" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:id="@+id/clear_button"
                android:layout_gravity="right" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/delete_button" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal|bottom"
        android:id="@+id/fence_mode_layout"
        android:background="#80ffffff" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/add_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel_button"
            android:visibility="gone" />

    </LinearLayout>


</FrameLayout>
